manifests/wordpress-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:5-php7.1-apache
          ports:
          - containerPort: 80
            name: wordpress
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www
            # - name: apache-config
            #   mountPath: /etc/apache2/sites-available/000-default.conf
            #   subPath: apache.conf
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-volume
        # - name: apache-config
        #   configMap:
        #     name: apache-config
        #     items:
        #       - key: apache.conf
        #         path: apache.conf
